email layout changed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="container"></div>
 
-        <section id="hero">
+        <section class="email">
             <h2>Subscribe to receive news about products</h2>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
                 <input name="email" id="email" type="email" placeholder="Enter email address" required>
