img sizes adjusted

--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
         <div class="container">
             <section id="hours">
                 <div class="grid">
-                    <div class="desc">
-                        <h2>NEW STORE HOURS.</h2>
-                        <p>
-                            Monday – Saturday: 9:00am – 7:30pm, Sunday: 10am – 6:30pm
-                        </p>
-                    </div>
+                    <h2>NEW STORE HOURS.</h2>
+                    <p>
+                        Monday – Saturday: 9:00am – 7:30pm, Sunday: 10am – 6:30pm
+                    </p>
                 </div>
             </section>
             <section id="video">
@@ -56,19 +54,19 @@
                 <div class="product" id="litter">
                     <div class="level">Litter-Robot</div>
                     <h2>$150</h2>
-                    <img src="img/litter-robot.jpg" alt="litter">
+                    <img width="100" src="img/litter-robot.jpg" alt="litter">
                     <button class="btn">Choose</button>
                 </div>
                 <div class="product" id="kiwi">
                     <div class="level">Kiwi Kitchens</div>
                     <h2>$100</h2>
-                    <img src="img/kiwi-kitchens.png" alt="kiwi kitchens">
+                    <img width="100" src="img/kiwi-kitchens.png" alt="kiwi kitchens">
                     <button class="btn">Choose</button>
                 </div>
                 <div class="product" id="lick_mats">
-                    <div class="level">Lick mats and bowls.</div>
+                    <div class="level">Lick mats and bowls</div>
                     <h2>$1200</h2>
-                    <img src="img/lickipet-lick-bowl.jpg" alt="lick mats and bowls">
+                    <img width="100" src="img/lickipet-lick-bowl.jpg" alt="lick mats and bowls">
                     <button class="btn">Choose</button>
                 </div>
             </section>
@@ -78,7 +76,7 @@
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Auto Order</a></li>
                 </ul>
-                <span>© 2022 PetPeople Enterprises, LLC. All rights reserved.</span>
+                <span>PetPeople Enterprises, LLC. All rights reserved. © 2022 </span>
             </footer>
         </div>
     </div>
