--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a class="nav-link" href="#hours">Working Hours</a></li>
                     <li><a class="nav-link" href="#video">Watch us</a></li>
-                    <li><a class="nav-link" href="#features">Featured Products</a></li>
+                    <li><a class="nav-link" href="#pricing">Featured Products</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,8 +38,8 @@
         <div class="container">
             <section id="hours">
                 <div class="grid">
-                    <h2>NEW STORE HOURS.</h2>
-                    <p>
+                    <h2 class="hours_title">NEW STORE HOURS.</h2>
+                    <p class="hours_subtitle">
                         Monday – Saturday: 9:00am – 7:30pm, Sunday: 10am – 6:30pm
                     </p>
                 </div>
@@ -54,19 +54,19 @@
                 <div class="product" id="litter">
                     <div class="level">Litter-Robot</div>
                     <h2>$150</h2>
-                    <img width="100" src="img/litter-robot.jpg" alt="litter">
+                    <img src="img/litter-robot.jpg" alt="litter">
                     <button class="btn">Choose</button>
                 </div>
                 <div class="product" id="kiwi">
                     <div class="level">Kiwi Kitchens</div>
                     <h2>$100</h2>
-                    <img width="100" src="img/kiwi-kitchens.png" alt="kiwi kitchens">
+                    <img src="img/kiwi-kitchens.png" alt="kiwi kitchens">
                     <button class="btn">Choose</button>
                 </div>
                 <div class="product" id="lick_mats">
                     <div class="level">Lick mats and bowls</div>
                     <h2>$1200</h2>
-                    <img width="100" src="img/lickipet-lick-bowl.jpg" alt="lick mats and bowls">
+                    <img src="img/lickipet-lick-bowl.jpg" alt="lick mats and bowls">
                     <button class="btn">Choose</button>
                 </div>
             </section>
