footer layout changed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </section>
             <section id="video">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/VTbJGbUGEYs"
+                <iframe class="video" width="360" height="315" src="https://www.youtube.com/embed/VTbJGbUGEYs"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -76,7 +76,7 @@
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Auto Order</a></li>
                 </ul>
-                <span>PetPeople Enterprises, LLC. All rights reserved. © 2022 </span>
+                <span> © 2022  PetPeople Enterprises, LLC. All rights reserved. </span>
             </footer>
         </div>
     </div>
