--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                     </p>
                 </div>
             </section>
-            <section id="video">
+            <div id="video">
                 <iframe class="video" width="360" height="315" src="https://www.youtube.com/embed/VTbJGbUGEYs"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-            </section>
+            </div>
             <section id="pricing">
                 <div class="product" id="litter">
                     <div class="level">Litter-Robot</div>
