--- a/index.html
+++ b/index.html
@@ -18,13 +18,32 @@
                 <img id="header-img" src="img/pet-people-logo.png" alt="pet-people logo">
             </div>
 
-            <nav id="nav-bar">
-                <ul>
-                    <li><a class="nav-link" href="#hours">Working Hours</a></li>
-                    <li><a class="nav-link" href="#video">Watch us</a></li>
-                    <li><a class="nav-link" href="#pricing">Featured Products</a></li>
-                </ul>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav_menu"
+                        aria-controls="nav_menu" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="nav_menu">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#hours">Working Hours</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#video">Watch us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#pricing">Featured Products</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
             </nav>
+
+
+
         </header>
 
         <div class="container"></div>
