--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
             </div>
 
             <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-                    
+                <div class="container">
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav_menu"
                         aria-controls="nav_menu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="nav_menu">
                         <ul class="navbar-nav">
+
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#hours">Working Hours</a>
                             </li>
@@ -56,7 +57,7 @@
             </form>
         </section>
 
-        <div class="container">
+        <div class="container_main">
             <section id="hours">
                 <div class="grid">
                     <h2 class="hours_title">NEW STORE HOURS.</h2>
