--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Auto Order</a></li>
                 </ul>
-                <span> © 2022 PetPeople Enterprises, LLC. All rights reserved. </span>
+                <span> © 2022 PetPeople Enterprises, LLC. </span>
             </footer>
         </div>
     </div>
